--- a/styles/styles.css
+++ b/styles/styles.css
@@ -186,6 +186,7 @@ h1{
     color: black;
     font-weight: 600;
     font-size: 2.8rem;
+    margin-bottom: 2rem;
 }
 .estudio{
     display: flex;
@@ -200,7 +201,60 @@ h1{
     width: 10vw;
     margin-top: -4vw;
 }
-.estudio section{
-    
-}
 /* END ESTUDIOS */ 
+
+/* START HABILIDADES */
+#habilidades{
+    margin-top: 3rem;
+}
+#habilidades div{
+    display: flex;
+    flex-direction: column;
+}
+#habilidades h1{
+    margin-top: 3rem;
+    text-align: center;
+    color: black;
+    font-weight: 600;
+    font-size: 2.8rem;
+}
+#habilidades p{
+    color: #000;
+    margin-left: 10%;
+    margin-top: 1rem;
+
+}
+.container{
+    text-align: center;
+    margin-left: 10%;
+    background-color: var(--otherWhite);
+    width: 80%;
+    border-radius: 10vw;
+    height: 2rem;
+}
+.barra {
+    background-color: var(--green);
+    color: white;
+    padding: 0rem;
+    font-size: 1rem;
+    border-radius: 10vw;
+}
+.html{
+    width: 65%;
+}
+.css{
+    width: 70%;
+}
+.javascript{
+    width: 50%;
+}
+.java{
+    width: 60%;
+}
+/* END HABILIDADES */ 
+#experiencia{
+    width: 80%;
+}
+/* START EXPERIENCIA */ 
+
+/* END EXPERIENCIA */ 
